# comic-shelf

./: .gitignore  AGENTS.md  README.md  homepagedata.json  index.html  package.json  pnpm-lock.yaml  requirements.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: add-to-gallery-dialog.tsx  artist-card.tsx  artist-group.tsx  breadcrumb-bar.tsx  card-item.tsx  comic-card.tsx  comic-context-menu.tsx  comic-grid.tsx  error-boundary.tsx  favorite-button.tsx  favorite-image-card.tsx  file-tree.spec.tsx  file-tree.tsx  folder-card.tsx  gallery-card.tsx  grid-page.tsx  grid-view.tsx  indexing-status.tsx  library-grid.tsx  library-sidebar.tsx  navigation-context-menu.spec.tsx  navigation-context-menu.tsx  navigation-link.spec.tsx  navigation-link.tsx  page-card.tsx  tab-bar.tsx  tabs.tsx  toast.tsx  top-bar.tsx  view-counter.tsx  virtualized-grid.tsx
src/contexts/: grid-navigation-context.tsx  indexing-context.tsx  settings-context.spec.tsx  settings-context.tsx  tab-context.spec.tsx  tab-context.tsx  (+1 more)
tasks/: 01-project-scaffolding.md  02-database-and-settings.md  03-app-shell-layout-tabs.md  04-comic-indexing-engine.md  05-comic-library-views.md  06-viewer-overview-mode.md  07-viewer-single-page-mode.md  08-viewer-scroll-mode.md  09-slideshow-mode.md  10-favorites-and-view-counter.md  11-settings-and-hotkeys.md  12-theme-and-integration.md
(+75 files in other folders)
